--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8"]
+        python-version: ["3.8", "3.9", "3.10"]
 
     steps:
       - uses: actions/checkout@v3
@@ -17,4 +17,10 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Display Python version
-        run: python -c "import sys; print(sys.version)"
+        run: echo `python -c "import sys; print(sys.version)"` > py${{ matrix.python-version }}.txt
+        id: python-version
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: python-artifact ${{ matrix.python-version }}
+          path: ${{ matrix.python-version }}.txt
